<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="Posts"
                android:textColor="@color/darkCharcoal"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filterPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/postDP"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/profile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title" />

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/postTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2mo"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/lorem_ipsum_text" />

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/profile" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/likeIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/ic_like_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/likeIcon"
                    android:text="n likes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="10 comments" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    app:srcCompat="@drawable/ic_like" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    app:srcCompat="@drawable/ic_comment" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    app:srcCompat="@drawable/ic_share" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    app:srcCompat="@drawable/ic_send" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>